# ditto-test

./: CMakeLists.txt  README.md
src/: config.h  main.cpp
src/comms/: comms.h  sync.cpp  sync.h
src/core/: agent.cpp  agent.h  crdt_state.cpp  crdt_state.h  events.h  grid.cpp  grid.h  node.h
src/render/: logger.cpp  logger.h  raylib_renderer.cpp  raylib_renderer.h  renderer.h
src/sim/: simulation.cpp  simulation.h
